--- a/1.md
+++ b/1.md
@@ -1,1 +1,2 @@
-https://people.eecs.berkeley.edu/~jrs/189/
+1. https://people.eecs.berkeley.edu/~jrs/189/
+  * [Piazza Group](https://piazza.com/class/ijltj19y6lv59e)
