--- a/1.md
+++ b/1.md
@@ -1,2 +1,5 @@
 1. https://people.eecs.berkeley.edu/~jrs/189/
   * [Piazza Group](https://piazza.com/class/ijltj19y6lv59e)
+  
+  
+2. R Blogger - https://www.r-bloggers.com/election-2016-tracking-emotions-with-r-and-python/
