--- a/1.md
+++ b/1.md
@@ -5,3 +5,5 @@
 2. R Blogger - https://www.r-bloggers.com/election-2016-tracking-emotions-with-r-and-python/
 
 3. CS50 - http://docs.cs50.net/problems/sentiments/sentiments.html
+
+4. Talks - https://www.youtube.com/playlist?list=PLrAXtmErZgOfMuxkACrYnD2fTgbzk2THW
